added registry dynamic DNS to helm defaults

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,5 +1,5 @@
 MSR:
-  FQDN: ec2-52-28-2-144.eu-central-1.compute.amazonaws.com 
+  FQDN: ky5cfrledamqxepzx-2qtac556tyjufmasg.labs.strigo.io
   port: 4443
 
 DB:
